<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_id">Loading Status</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>


    <string name="download_with_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="download_with_load_app">LoadApp - Current repository by Udacity</string>
    <string name="download_with_retrofit">Retrofit - Type-safe HTTP client for Android</string>
    <string name="download_logo">Download Logo</string>
    <string name="download">Download</string>
    <string name="loading">We Are Loading</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>
    <string name="ok">OK</string>


</resources>
