<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/content_detail_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/titleNameFileTxtView"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="308dp"
        android:text="@string/file_name"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/titleNameFileResultTxtView"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleNameFileResultTxtView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/titleNameFileTxtView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/download_with_load_app" />

    <TextView
        android:id="@+id/statusResultTxtView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/statusTxtView"
        app:layout_constraintTop_toBottomOf="@+id/titleNameFileResultTxtView"
        tools:text="Success" />

    <TextView
        android:id="@+id/statusTxtView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="22sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="547dp" />

    <Button
        android:id="@+id/okBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/ok"
        android:textColor="#455A64"
        android:textSize="22sp"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="611dp" />

</androidx.constraintlayout.motion.widget.MotionLayout>